--- a/src/components/thanks/thanks.scss
+++ b/src/components/thanks/thanks.scss
@@ -18,6 +18,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    overflow: hidden;
 
     h1 {
       color: white;
@@ -31,5 +32,23 @@
   &__btn {
     margin: 50px auto 0;
     transform: scale(1.3);
+  }
+}
+
+@media (max-width: 700px) {
+  .thanks {
+    &__box {
+      
+      h1 {
+        font-size: 1.5em;
+        line-height: 1.1em;
+        margin: 7px 0;
+      }
+    }
+
+    &__btn {
+      margin: 25px auto 0;
+      transform: scale(1.2);
+    }
   }
 }
