--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -193,12 +193,12 @@
 @media (max-width: 700px) {
   .header {
     img.logo {
-      height: 90px;
+      height: 95px;
       opacity: 1;
       position: relative;
       left: 50%;
       transform: translateX(-50%);
-     
+      transition: none;
       
     }
 
@@ -302,22 +302,30 @@
     }
     
     img.logo.scroll {
-      height: 80px;
-      opacity: 0;
+      
+     
       transition: none;
-      position: relative;
-      left: 30px; 
-    }
+      animation-duration: 1s;
+      animation-name: appearLogo;
+      animation-iteration-count: 1;
+      animation-fill-mode: forwards;
 
-    // img.logo.scroll::before {
-    //   content: "*";
-    //   color:#fff;
-    //   display: block;
-    //   position: absolute;
-    //   height: 80px;
-    //   opacity: 1;
-    //   transition: all 0.8s linear 0.05s;
-    //   left: 30px; 
-    // }
+      height: 75px;
+      padding: 0 0 7px;
+      opacity: 0;
+      position: relative;
+      left: 30px;
+      
+    }
+  }
+}
+
+@keyframes appearLogo {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
   }
 }
