--- a/src/components/langToggle/langToggle.scss
+++ b/src/components/langToggle/langToggle.scss
@@ -84,10 +84,16 @@
       display: none;
       
     }
+
+    &__btn:hover {
+      transform: none;
+    }
   }
 
   .langToggle.dropped {
     opacity: 0;
   }
+
+  
   
 }
