--- a/src/components/home/homeEng.pug
+++ b/src/components/home/homeEng.pug
@@ -2,7 +2,7 @@
   .container 
     .home__box
       .home__greetings 
-        p Think about websites? 
+        p Think about websites 
         p Think e-Formaliza
       .home__row       
         .home__column
