--- a/src/index.pug
+++ b/src/index.pug
@@ -13,8 +13,7 @@ html(lang="en")
     meta(property="og:description" content="Criação de web sites profissionais") 
     meta(property="og:image" content="https://i.postimg.cc/RCWvsSxt/logo-principal.jpg") 
     title e-Formaliza
-  //- body#home(style="visibility: hidden;")
-  body#home
+  body#home(style="visibility: hidden;")
     include components/langToggle/langToggle
     include components/header/header
     include components/home/home
