--- a/src/index.pug
+++ b/src/index.pug
@@ -18,13 +18,28 @@ html(lang="en")
     include components/header/header
     include components/home/home
     include components/goal/goal
-    include components/creation/creation
-    include components/portfolio/portfolio
-    include components/promotion/promotion
-    include components/offers/offers
-    include components/discount/discount
-    include components/ask/ask
-    include components/footer/footer
+    include components/goal/goal
+    include components/goal/goal
+    include components/goal/goal
+    include components/goal/goal
+    include components/goal/goal
+    include components/goal/goal
+    include components/goal/goal
+    include components/goal/goal
+    include components/goal/goal
+    include components/goal/goal
+    include components/goal/goal
+    include components/goal/goal
+    include components/goal/goal
+    include components/goal/goal
+    include components/goal/goal
+    //- include components/creation/creation
+    //- include components/portfolio/portfolio
+    //- include components/promotion/promotion
+    //- include components/offers/offers
+    //- include components/discount/discount
+    //- include components/ask/ask
+    //- include components/footer/footer
    
    
 
