--- a/src/index.pug
+++ b/src/index.pug
@@ -33,13 +33,13 @@ html(lang="en")
     include components/goal/goal
     include components/goal/goal
     include components/goal/goal
-    //- include components/creation/creation
-    //- include components/portfolio/portfolio
-    //- include components/promotion/promotion
-    //- include components/offers/offers
-    //- include components/discount/discount
-    //- include components/ask/ask
-    //- include components/footer/footer
+    include components/creation/creation
+    include components/portfolio/portfolio
+    include components/promotion/promotion
+    include components/offers/offers
+    include components/discount/discount
+    include components/ask/ask
+    include components/footer/footer
    
    
 
